--- a/result/2022-06-28.md
+++ b/result/2022-06-28.md
@@ -5,9 +5,9 @@
 5. [这富贵包怕是保不住了](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%AF%8C%E8%B4%B5%E5%8C%85%E6%80%95%E6%98%AF%E4%BF%9D%E4%B8%8D%E4%BD%8F%E4%BA%86%23&Refer=top) 602402
 6. [日本樱桃一颗拍出1980元天价](https://s.weibo.com//weibo?q=%23%E6%97%A5%E6%9C%AC%E6%A8%B1%E6%A1%83%E4%B8%80%E9%A2%97%E6%8B%8D%E5%87%BA1980%E5%85%83%E5%A4%A9%E4%BB%B7%23&Refer=top) 557182
 7. [北京唯一隔离考生高考全纪录](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E5%94%AF%E4%B8%80%E9%9A%94%E7%A6%BB%E8%80%83%E7%94%9F%E9%AB%98%E8%80%83%E5%85%A8%E7%BA%AA%E5%BD%95%23&Refer=top) 529399
-8. [宝宝误进电梯上楼男子热心送回](https://s.weibo.com//weibo?q=%23%E5%AE%9D%E5%AE%9D%E8%AF%AF%E8%BF%9B%E7%94%B5%E6%A2%AF%E4%B8%8A%E6%A5%BC%E7%94%B7%E5%AD%90%E7%83%AD%E5%BF%83%E9%80%81%E5%9B%9E%23&Refer=top) 462611
-9. [众人路边吃火锅鸟儿精准飞入锅中](https://s.weibo.com//weibo?q=%23%E4%BC%97%E4%BA%BA%E8%B7%AF%E8%BE%B9%E5%90%83%E7%81%AB%E9%94%85%E9%B8%9F%E5%84%BF%E7%B2%BE%E5%87%86%E9%A3%9E%E5%85%A5%E9%94%85%E4%B8%AD%23&Refer=top) 460386
-10. [洛克王国手游](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E5%85%8B%E7%8E%8B%E5%9B%BD%E6%89%8B%E6%B8%B8%23&Refer=top) 435126
+8. [众人路边吃火锅鸟儿精准飞入锅中](https://s.weibo.com//weibo?q=%23%E4%BC%97%E4%BA%BA%E8%B7%AF%E8%BE%B9%E5%90%83%E7%81%AB%E9%94%85%E9%B8%9F%E5%84%BF%E7%B2%BE%E5%87%86%E9%A3%9E%E5%85%A5%E9%94%85%E4%B8%AD%23&Refer=top) 499482
+9. [洛克王国手游](https://s.weibo.com//weibo?q=%23%E6%B4%9B%E5%85%8B%E7%8E%8B%E5%9B%BD%E6%89%8B%E6%B8%B8%23&Refer=top) 480896
+10. [宝宝误进电梯上楼男子热心送回](https://s.weibo.com//weibo?q=%23%E5%AE%9D%E5%AE%9D%E8%AF%AF%E8%BF%9B%E7%94%B5%E6%A2%AF%E4%B8%8A%E6%A5%BC%E7%94%B7%E5%AD%90%E7%83%AD%E5%BF%83%E9%80%81%E5%9B%9E%23&Refer=top) 462611
 11. [当你用离职的心态去工作](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BD%A0%E7%94%A8%E7%A6%BB%E8%81%8C%E7%9A%84%E5%BF%83%E6%80%81%E5%8E%BB%E5%B7%A5%E4%BD%9C%23&Refer=top) 429213
 12. [iPhone14系列8月将开启量产](https://s.weibo.com//weibo?q=%23iPhone14%E7%B3%BB%E5%88%978%E6%9C%88%E5%B0%86%E5%BC%80%E5%90%AF%E9%87%8F%E4%BA%A7%23&Refer=top) 418643
 13. [被西藏的厕所惊艳到了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E8%A5%BF%E8%97%8F%E7%9A%84%E5%8E%95%E6%89%80%E6%83%8A%E8%89%B3%E5%88%B0%E4%BA%86%23&Refer=top) 415749
@@ -39,3 +39,4 @@
 39. [第一视角体验天门山索道](https://s.weibo.com//weibo?q=%23%E7%AC%AC%E4%B8%80%E8%A7%86%E8%A7%92%E4%BD%93%E9%AA%8C%E5%A4%A9%E9%97%A8%E5%B1%B1%E7%B4%A2%E9%81%93%23&Refer=top) 93777
 40. [大家叫我刘清华不考上不好意思](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E5%AE%B6%E5%8F%AB%E6%88%91%E5%88%98%E6%B8%85%E5%8D%8E%E4%B8%8D%E8%80%83%E4%B8%8A%E4%B8%8D%E5%A5%BD%E6%84%8F%E6%80%9D%23&Refer=top) 85409
 41. [2022国际泳联世锦赛](https://s.weibo.com//weibo?q=%232022%E5%9B%BD%E9%99%85%E6%B3%B3%E8%81%94%E4%B8%96%E9%94%A6%E8%B5%9B%23&Refer=top) 75386
+42. [何超欣清华大学毕业照](https://s.weibo.com//weibo?q=%23%E4%BD%95%E8%B6%85%E6%AC%A3%E6%B8%85%E5%8D%8E%E5%A4%A7%E5%AD%A6%E6%AF%95%E4%B8%9A%E7%85%A7%23&Refer=top) 70164
