--- a/result/2022-06-28.md
+++ b/result/2022-06-28.md
@@ -39,4 +39,5 @@
 39. [第一视角体验天门山索道](https://s.weibo.com//weibo?q=%23%E7%AC%AC%E4%B8%80%E8%A7%86%E8%A7%92%E4%BD%93%E9%AA%8C%E5%A4%A9%E9%97%A8%E5%B1%B1%E7%B4%A2%E9%81%93%23&Refer=top) 93777
 40. [大家叫我刘清华不考上不好意思](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E5%AE%B6%E5%8F%AB%E6%88%91%E5%88%98%E6%B8%85%E5%8D%8E%E4%B8%8D%E8%80%83%E4%B8%8A%E4%B8%8D%E5%A5%BD%E6%84%8F%E6%80%9D%23&Refer=top) 85409
 41. [2022国际泳联世锦赛](https://s.weibo.com//weibo?q=%232022%E5%9B%BD%E9%99%85%E6%B3%B3%E8%81%94%E4%B8%96%E9%94%A6%E8%B5%9B%23&Refer=top) 75386
-42. [何超欣清华大学毕业照](https://s.weibo.com//weibo?q=%23%E4%BD%95%E8%B6%85%E6%AC%A3%E6%B8%85%E5%8D%8E%E5%A4%A7%E5%AD%A6%E6%AF%95%E4%B8%9A%E7%85%A7%23&Refer=top) 70164
+42. [全红婵陈芋汐再战女子10米台决赛](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%BA%A2%E5%A9%B5%E9%99%88%E8%8A%8B%E6%B1%90%E5%86%8D%E6%88%98%E5%A5%B3%E5%AD%9010%E7%B1%B3%E5%8F%B0%E5%86%B3%E8%B5%9B%23&Refer=top) 73615
+43. [何超欣清华大学毕业照](https://s.weibo.com//weibo?q=%23%E4%BD%95%E8%B6%85%E6%AC%A3%E6%B8%85%E5%8D%8E%E5%A4%A7%E5%AD%A6%E6%AF%95%E4%B8%9A%E7%85%A7%23&Refer=top) 70164
